fix log button centering (Issue #117)
A margin-right had been added to article buttons to make pricing buttons
on the print services page layout correctly, which threw off centering
on the blog page. The margin-right was removed, and set into a new class
specific to those pricing buttons.

--- a/style.scss
+++ b/style.scss
@@ -560,7 +560,6 @@ article {
     }
     button {
       padding: 10px;
-      margin-right: 25px;
       border-radius: 5px;
       color: #424242;
       background-color: white;
@@ -573,6 +572,9 @@ article {
       &:active {
         background-color: gray;
       }
+    }
+    .pricing-button {
+      margin-right: 25px;
     }
   }
 }
